--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <title>Katvan</title>
 
         <link href="/assets/bootstrap-5.3.8.min.css" rel="stylesheet">
-        <link href="/assets/fontawesome-7.1.0-all.min.css" rel="stylesheet">
+        <link href="/assets/fontawesome-7.1.0/css/all.min.css" rel="stylesheet">
         <link href="/assets/style.css" rel="stylesheet">
 
         <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
