Generate smaller screenshot preview images

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,16 +55,15 @@
                                 <div class="carousel-item active">
                                     <a href="/assets/screenshot-main.png" target="_blank">
                                         <img class="d-block"
-                                            src="/assets/screenshot-main.png"
+                                            src="/assets/screenshot-main-preview.webp"
                                             alt="Screenshot of main window on Linux in light mode"
-                                            title="The main window on Linux in light mode"
-                                            loading="lazy" />
+                                            title="The main window on Linux in light mode" />
                                     </a>
                                 </div>
                                 <div class="carousel-item">
                                     <a href="/assets/screenshot-main-dark.png" target="_blank">
                                         <img class="d-block"
-                                             src="/assets/screenshot-main-dark.png"
+                                             src="/assets/screenshot-main-dark-preview.webp"
                                              alt="Screenshot of main window on Linux in dark mode"
                                              title="The main window on Linux in dark mode"
                                              loading="lazy"/>
@@ -73,7 +72,7 @@
                                 <div class="carousel-item">
                                     <a href="/assets/screenshot-main-win.png" target="_blank">
                                         <img class="d-block"
-                                            src="/assets/screenshot-main-win.png"
+                                            src="/assets/screenshot-main-win-preview.webp"
                                             alt="Screenshot of main window on Windows"
                                             title="The main window on Windows 10"
                                             loading="lazy" />
@@ -82,7 +81,7 @@
                                 <div class="carousel-item">
                                     <a href="/assets/screenshot-symbol-picker.png" target="_blank">
                                         <img class="d-block"
-                                            src="/assets/screenshot-symbol-picker.png"
+                                            src="/assets/screenshot-symbol-picker-preview.webp"
                                             alt="Screenshot of the symbol picker dialog"
                                             title="Symbol picker dialog"
                                             loading="lazy" />
@@ -91,7 +90,7 @@
                                 <div class="carousel-item">
                                     <a href="/assets/screenshot-settings.png" target="_blank">
                                         <img class="d-block"
-                                            src="/assets/screenshot-settings.png"
+                                            src="/assets/screenshot-settings-preview.webp"
                                             alt="Screenshot of the editor settings dialog"
                                             title="Editor settings dialog"
                                             loading="lazy" />
@@ -211,7 +210,7 @@
                             <p>Flatpak</p>
                             <p class="text-muted">A containerized build, for those who need it.</p>
                             <a href="https://flathub.org/apps/app.katvan.Katvan" target="_blank">
-                                <img src="/assets/flathub.webp" width="240" alt="Get it on Flathub" />
+                                <img src="/assets/flathub.webp" width="240" height="80" alt="Get it on Flathub" />
                             </a>
                         </div>
                     </div>
@@ -274,6 +273,6 @@
             </div>
         </footer>
 
-        <script src="/assets/bootstrap-5.3.8.bundle.min.js"></script>
+        <script src="/assets/bootstrap-5.3.8.bundle.min.js" defer></script>
     </body>
 </html>
